--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - checkout
       - run:
           name: Install mruby
-          command: ruby/install:mruby
+          command: ruby/install mruby
       - run:
           name: Which bundler?
           command: bundle -v
