--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ orbs:
 jobs:
   build:
     docker:
-      - image: alpine:3.11
+      - image: ubuntu:bionic
     steps:
       - checkout
       - run:
