--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,9 +14,8 @@ jobs:
       - image: ubuntu:bionic
     steps:
       - checkout
-      - run:
-          name: Install mruby
-          command: ruby/install mruby
+      - ruby/install:
+        - mruby
       - run:
           name: Which bundler?
           command: bundle -v
