--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ orbs:
 jobs:
   build:
     docker:
-      - image: ubuntu:bionic
+      - image: circleci/buildpack-deps
     steps:
       - checkout
       - ruby/install:
