--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,9 @@ jobs:
           command: bundle -v
       - ruby/install-deps
       - ruby/save-cache
+      - run:
+          name: Tests
+          command: rake test
 
 # What to do next? Set up a test job. Please see
 # https://circleci.com/docs/2.0/configuration-reference/, for more  info on how to get started.
