--- a/.github/workflows/skunk.yml
+++ b/.github/workflows/skunk.yml
@@ -22,8 +22,8 @@ jobs:
           CURRENT_BRANCH="$(git rev-parse --abbrev-ref HEAD)"
           if [[ "$CURRENT_BRANCH" != "master" ]]; then
             echo "Executing within branch: $CURRENT_BRANCH"
-            skunk lib/ -b master
+            skunk -b master
           else
             echo "Executing within master branch"
-            skunk lib/
+            skunk
           fi
